tests/script_runtime_errors/bad_unary/error.txt
Error: 
    2 | not snot
      |     ^^^^ The unary operation `not` is not defined for the type `string`